--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,136 @@
     --dark-20: #333333;
     --dark-30: #828282;
     --dark-40: #F9F9F9;
-    --dark-logo: #191b34;
+    --black-logo: #191b34;
     --blue: #1478e7;
+    --blue-light: #7cd7f3;
 }
 
 body {
     font-family: "Roboto", serif;
     color: var(--dark-20);
     text-align: center;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(90deg, rgba(23, 23, 23, 1) 0%, rgba(255, 255, 255, 0.485) 0%, rgba(25, 27, 52, 1) 65%);
+    border-bottom: 2px solid transparent;
+    border-image: linear-gradient(90deg, rgba(25,27,52,1) 0%, rgba(62,79,113,1) 49%, rgba(137,184,237,1) 100%);
+    border-image-slice: 1;
+}
+
+header .logo {
+    width: 270px;
+}
+
+menu ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px;
+    gap: 25px;
+}
+
+menu ul li {
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+menu ul li:hover {
+    color: var(--blue);
+}
+
+menu a {
+    color: var(--dark-40);
+}
+
+#sobre {
+    background: rgb(23, 23, 23);
+    background: linear-gradient(90deg, rgba(23, 23, 23, 1) 0%, rgba(20, 120, 231, 0.48503151260504207) 0%, rgba(25, 27, 52, 1) 65%);
+    position: relative;
+    text-align: left;
+    min-height: 92vh;
+}
+
+.sobre_background {
+    position: relative;
+    height: 92vh;
+    z-index: -10;
+}
+
+#sobre .descricao {
+    color: var(--dark-40);
+    width: 40vw;
+    position: absolute;
+    text-align: center;
+    top: 100px;
+    right: 70px;
+}
+
+#sobre .descricao h1 {
+    font-size: 40px;
+}
+
+#sobre .descricao p {
+    text-align: justify;
+    padding-top: 25px;
+    line-height: 30px;
+    font-size: 18px;
+}
+
+#sobre .descricao p.center {
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    color: var(--blue-light);
+}
+
+#sobre .contact {
+    border: none;
+    outline: none;
+    height: 45px;
+    width: 325px;
+
+    color: var(--dark-40);
+    background-color: var(--blue);
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-size: 16px;
+    margin-top: 40px;
+}
+
+#sobre .contact:hover {
+    cursor: pointer;
+    background: transparent;
+    border: 2px solid var(--blue);
+    box-shadow: 2px 2px 2px rgba(0, 181, 253, 0.5);
+}
+
+.faixa {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 60px;
+    background-color: var(--black-logo);
+}
+
+.faixa .elemento {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.faixa i {
+    font-size: 60px;
+    color: gold;
+    padding-right: 15px;
+}
+
+.faixa span {
+    font-style: italic;
+    color: var(--dark-40);
 }
