--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     --black-logo: #191b34;
     --blue: #1478e7;
     --blue-light: #7cd7f3;
+    --blue-dark: #164782;
 }
 
 body {
@@ -20,19 +21,26 @@ body {
     padding: 100px 0 60px 0;
 }
 
-h6.black {
+h6.black,
+#contato .subtitulo {
     font-size: 34px;
     color: var(--black-logo);
 }
 
-h1.blue {
+h1.blue,
+#contato .contato-titulo {
     font-size: 75px;
     color: var(--blue);
 }
 
-section {
+#servicos,
+#clientes,
+#duvidas,
+#contato,
+#localizacao {
     padding-bottom: 100px;
 }
+
 /* FIM TÍTULOS */
 
 header {
@@ -41,7 +49,7 @@ header {
     align-items: center;
     background: linear-gradient(90deg, rgba(23, 23, 23, 1) 0%, rgba(255, 255, 255, 0.485) 0%, rgba(25, 27, 52, 1) 65%);
     border-bottom: 2px solid transparent;
-    border-image: linear-gradient(90deg, rgba(25,27,52,1) 0%, rgba(62,79,113,1) 49%, rgba(137,184,237,1) 100%);
+    border-image: linear-gradient(90deg, rgba(25, 27, 52, 1) 0%, rgba(62, 79, 113, 1) 49%, rgba(137, 184, 237, 1) 100%);
     border-image-slice: 1;
 }
 
@@ -158,7 +166,7 @@ menu a {
     color: var(--dark-40);
 }
 
-/* SERVIÇOS */ 
+/* SERVIÇOS */
 
 #servicos .frases h1 {
     font-size: 35px;
@@ -193,7 +201,15 @@ menu a {
     color: var(--blue);
 }
 
-/* CLIENTES */ 
+hr {
+    margin: 0 auto;
+    border-bottom: 2px solid transparent;
+    border-image: linear-gradient(0.25turn, rgb(34, 86, 255), rgb(0, 247, 255), rgba(56, 2, 155, 0));
+    border-image-slice: 1;
+    width: 40vw;
+}
+
+/* CLIENTES */
 #clientes {
     display: flex;
     flex-direction: column;
@@ -238,7 +254,7 @@ menu a {
     align-items: center;
     gap: 64px;
     padding: 64px 80px;
-    background-color: #1478e7;
+    background-color: var(--blue);
 }
 
 #duvidas .bloco {
@@ -297,3 +313,160 @@ menu a {
     opacity: 1;
     padding: 24px;
 }
+
+/* CONTATO */
+#contato {
+    text-align: center;
+}
+
+#contato .fone {
+    color: var(--blue);
+    font-weight: 800;
+    font-size: 30px;
+    padding: 60px;
+    /* border: 3px solid var(--blue-dark);
+    width: 500px;
+    border-radius: 30px;
+    margin: auto; */
+}
+
+#contato .fone i {
+    color: var(--dark-40);
+    background-color: var(--blue);
+    padding: 20px;
+    border-radius: 50%;
+    margin-bottom: 35px;
+}
+
+#contato .redes {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    flex-wrap: wrap;
+    align-items: baseline;
+    margin-top: 25px;
+}
+
+#contato .redes .redes-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid #ddd;
+    border-radius: 40px;
+    background-color: var(--dark-40);
+    align-items: center;
+    width: 230px;
+    margin-top: 25px;
+    padding: 45px 15px;
+
+}
+
+#contato .redes .redes-container i {
+    font-size: 32px;
+    color: var(--dark-40);
+
+    background-color: var(--blue);
+    border-radius: 50px;
+    width: 62px;
+    height: 62px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#contato .redes .redes-container span {
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 20px;
+}
+
+#contato .redes .redes-container p {
+    font-size: 14px;
+}
+
+#contato .redes .redes-container:hover {
+    border: 2px solid var(--dark-30);
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+#contato .redes .redes-container .wpp:hover {
+    background-color: #12b40c;
+}
+
+#contato .redes .redes-container .insta:hover {
+    background-color: #da1852;
+}
+
+#contato .redes .redes-container .face:hover {
+    background-color: #164782;
+}
+
+
+/* Início de formulário */
+form {
+    width: 30rem;
+    position: relative;
+    margin: auto;
+    padding: 2rem 0;
+}
+
+fieldset {
+    border: 0;
+}
+
+input,
+select {
+    border-radius: 2px;
+    width: 30vw;
+    display: block;
+}
+
+.campo {
+    padding-bottom: 2px;
+}
+
+.campo input[type="text"],
+.campo select {
+    color: var(--blue-dark);
+    border: none;
+    outline: none;
+    border: 1px solid var(--blue-dark);
+    border-radius: 25px;
+    padding: 1rem 20px;
+    margin-bottom: 1.3rem;
+    font-size: 16px;
+}
+
+.campo input:focus,
+.campo select:focus {
+    background-color: #e9e9e9;
+}
+
+.campo input::placeholder,
+.campo select::placeholder {
+    color: var(--blue-dark);
+}
+
+.btn-enviar {
+    display: block;
+    border-radius: 2px;
+    font-size: 1.2em;
+    background: var(--blue);
+    border: 0;
+    margin-bottom: 1em;
+    color: var(--dark-40);
+    padding: 0.3em 1.7em;
+    margin: 30px 0 50px 65px;
+
+    transform: translate(-50%, -50%);
+}
+
+.btn-enviar:hover {
+    background: var(--blue-dark);
+    cursor: pointer;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    text-shadow: none;
+}
+
+/*Fim do formulário */
